added an ExploreCard to take in search results from the API

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,3 +44,11 @@ a.navbar-item:active {
   color: #ffffff;
   background-color: #0099bb;
 }
+
+/* Explore page styling */
+
+.card {
+  width: 300px;
+  height: auto;
+  margin: 20px
+}
