--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,10 +45,20 @@ a.navbar-item:active {
   background-color: #0099bb;
 }
 
-/* Explore page styling */
-
+/* ------- Explore page styling ----- */
 .card {
   width: 300px;
   height: auto;
   margin: 20px
 }
+.button.is-primary.is-light.save-btn {
+  background-color: #ffffff00;
+  width: 30px;
+  height: 30px;
+  margin-bottom: 10px;
+}
+
+.artsy-img {
+  width:300px;
+}
+
